# boids

./: CMakeLists.txt  README.md
include/: boid.h  constants.h  font.h  gamestate.h  mathStuff.h  vec2d.h
src/: boid.c  font.c  gamestate.c  main.c  vec2d.c
